--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "couchdb-delete": "^2.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "method-override": "^3.0.0",
     "node-couchdb": "^1.3.0"
   }
 }
